src/parser/snapshots/expr/incrdecr/increment_pre_with_unary_complement.snap
---
source: src/parser/parser.rs
description: increment and decrement with correct precedence
expression: actual.unwrap()
info: ~++a
---
location:
  line: 1
  column: 1
kind:
  unary:
    - complement
    - location:
        line: 1
        column: 2
      kind:
        increment:
          is_post: false
          e:
            location:
              line: 1
              column: 4
            kind:
              variable: a
