src/parser/snapshots/expr/incrdecr/increment_pre_with_unary_neg.snap
---
source: src/parser/parser.rs
description: increment and decrement with correct precedence
expression: actual.unwrap()
info: "-++a"
---
location:
  line: 1
  column: 1
kind:
  unary:
    - negate
    - location:
        line: 1
        column: 2
      kind:
        increment:
          is_post: false
          e:
            location:
              line: 1
              column: 4
            kind:
              variable:
                name: a
                location:
                  line: 1
                  column: 4
                original_name: ~
